--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -1,12 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d249f66d-2fde-448d-9eba-0f8839e9f42d",
+   "cell_type": "markdown",
+   "id": "a8cc51d3-a221-45e8-900c-efbf486692e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Rappel de la journée 1\n",
+    "\n",
+    "## Matin \n",
+    "\n",
+    "\n",
+    "\n",
+    "## Après-midi \n"
+   ]
   },
   {
    "cell_type": "code",
