--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -9,6 +9,9 @@
     "\n",
     "## Matin \n",
     "\n",
+    "* présentation générale du langage\n",
+    "* présentation des bonnes pratiques (code pythonique)\n",
+    "* explication de\n",
     "\n",
     "\n",
     "## Après-midi \n"
