--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -11,10 +11,14 @@
     "\n",
     "* présentation générale du langage\n",
     "* présentation des bonnes pratiques (code pythonique)\n",
-    "* explication de\n",
+    "* explication de la variable `path`\n",
+    "    * regarder le chemin complet d'une application en faisant\n",
+    "        * sous linux: `which`\n",
+    "        * sous windows: `where` (renvoie les résultats qui ont le même nom dans tous les dossiers du PATH, le premier est le plus prioritaire)\n",
     "\n",
+    "## Après-midi \n",
     "\n",
-    "## Après-midi \n"
+    "* `venv`\n"
    ]
   },
   {
