--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "## Après-midi \n",
     "\n",
-    "* `venv`\n"
+    "* `venv`\n",
+    "* librairies `builtin`, librairie standard, librairie tierces (installées avec `pip`)\n",
+    "* installer des paquets sans avoir internet (``\n"
    ]
   },
   {
