--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -20,7 +20,8 @@
     "\n",
     "* `venv`\n",
     "* librairies `builtin`, librairie standard, librairie tierces (installées avec `pip`)\n",
-    "* installer des paquets sans avoir internet (``\n"
+    "* installer des paquets sans avoir internet (`pip download` puis installation depuis un dossier spécifique) : https://stackoverflow.com/questions/11091623/how-to-install-packages-offline  \n",
+    "* \n"
    ]
   },
   {
