--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -19,6 +19,10 @@
     "## Après-midi \n",
     "\n",
     "* `venv`\n",
+    "    * permet d'encapsuler les dépendances liées à un projet\n",
+    "    * va surcharger le PATH pour utiliser l'interpréteur du venv\n",
+    "    * activer l'environnement\n",
+    "        * windows : ``\n",
     "* librairies `builtin`, librairie standard, librairie tierces (installées avec `pip`)\n",
     "* installer des paquets sans avoir internet (`pip download` puis installation depuis un dossier spécifique) : https://stackoverflow.com/questions/11091623/how-to-install-packages-offline  \n",
     "* \n"
