--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -20,9 +20,12 @@
     "\n",
     "* `venv`\n",
     "    * permet d'encapsuler les dépendances liées à un projet\n",
+    "    * pour le créer : `python -m venv LE_NOM`\n",
     "    * va surcharger le PATH pour utiliser l'interpréteur du venv\n",
     "    * activer l'environnement\n",
-    "        * windows : ``\n",
+    "        * windows : `venv/Scripts/activate`\n",
+    "        * unix : `source venv/bin/activate`\n",
+    "        * depuis VSCode ou PyCharm en cliquant sur la selection de l'interpréteur\n",
     "* librairies `builtin`, librairie standard, librairie tierces (installées avec `pip`)\n",
     "* installer des paquets sans avoir internet (`pip download` puis installation depuis un dossier spécifique) : https://stackoverflow.com/questions/11091623/how-to-install-packages-offline  \n",
     "* \n"
