--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "* `venv`\n",
     "    * permet d'encapsuler les dépendances liées à un projet\n",
-    "    * pour le créer : `python -m venv LE_NOM`\n",
+    "    * pour le créer : `python -m venv LE_NOM_DU_VENV`\n",
     "    * va surcharger le PATH pour utiliser l'interpréteur du venv\n",
     "    * activer l'environnement\n",
     "        * windows : `venv/Scripts/activate`\n",
