--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -28,7 +28,10 @@
     "        * depuis VSCode ou PyCharm en cliquant sur la selection de l'interpréteur\n",
     "* librairies `builtin`, librairie standard, librairie tierces (installées avec `pip`)\n",
     "* installer des paquets sans avoir internet (`pip download` puis installation depuis un dossier spécifique) : https://stackoverflow.com/questions/11091623/how-to-install-packages-offline  \n",
-    "* \n"
+    "* bonnes pratiques / configuration de l'éditeur (testé avec VSCode)\n",
+    "    * `ruff`\n",
+    "        * formatage du code (référence de la PEP 8, conventions d'écriture de code python)\n",
+    "        * linting : \n"
    ]
   },
   {
