--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -31,7 +31,9 @@
     "* bonnes pratiques / configuration de l'éditeur (testé avec VSCode)\n",
     "    * `ruff`\n",
     "        * formatage du code (référence de la PEP 8, conventions d'écriture de code python)\n",
-    "        * linting : \n"
+    "        * linting : analyse statique du code (le collègue pointilleux)\n",
+    "    * `mypy` : vérification des types à partir \n",
+    "    * `pylint`:  \n"
    ]
   },
   {
