--- a/tape_en_cours/Rappels J1.ipynb
+++ b/tape_en_cours/Rappels J1.ipynb
@@ -32,8 +32,8 @@
     "    * `ruff`\n",
     "        * formatage du code (référence de la PEP 8, conventions d'écriture de code python)\n",
     "        * linting : analyse statique du code (le collègue pointilleux)\n",
-    "    * `mypy` : vérification des types à partir \n",
-    "    * `pylint`:  \n"
+    "    * `mypy` : vérification des types à partir `annotations de types`\n",
+    "    * `pylint`: \n"
    ]
   },
   {
