--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -38,9 +38,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31568fd1-bd3b-4c83-a882-f069669af088",
+   "metadata": {},
+   "source": [
+    "# Tuple unpacking "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1df1597-78d6-4150-9f2b-2c50ffda203e",
+   "id": "d0243081-b782-4968-9884-d5a3440323d5",
    "metadata": {},
    "outputs": [],
    "source": []
