--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -47,11 +47,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d0243081-b782-4968-9884-d5a3440323d5",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = 1, 2 \n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "072a03b6-1404-407b-b6bc-2d1c76480552",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [\n",
+    "    (), \n",
+    "    (),\n",
+    "]"
+   ]
   }
  ],
  "metadata": {
