--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "072a03b6-1404-407b-b6bc-2d1c76480552",
    "metadata": {},
    "outputs": [],
@@ -78,6 +78,36 @@
     "    (),\n",
     "]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4571c877-2b2e-4761-aa52-37e625410f0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 'zaaezé', [], 42]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    return 42\n",
+    "\n",
+    "l = [1, \"zaaezé\", [], f()]\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ed2318b-0ce7-44aa-a57c-ee999f143d99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
