--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -80,8 +80,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f312ddad-a022-4bdb-b86f-77a3a59dd545",
+   "metadata": {},
+   "source": [
+    "# Les listes "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "4571c877-2b2e-4761-aa52-37e625410f0f",
    "metadata": {},
    "outputs": [
@@ -89,15 +97,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 'zaaezé', [], 42]\n"
+      "[1, 'zaaezé', [], 126]\n"
      ]
     }
    ],
    "source": [
-    "def f():\n",
-    "    return 42\n",
+    "def f(a):\n",
+    "    return 42*a\n",
     "\n",
-    "l = [1, \"zaaezé\", [], f()]\n",
+    "l = [1, \"zaaezé\", [], f(3)]\n",
     "print(l)"
    ]
   },
