--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -84,7 +84,9 @@
    "id": "f312ddad-a022-4bdb-b86f-77a3a59dd545",
    "metadata": {},
    "source": [
-    "# Les listes "
+    "# Les listes \n",
+    "\n",
+    "Dans une liste on peut mettre n'importe quel type de données"
    ]
   },
   {
@@ -111,11 +113,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "7ed2318b-0ce7-44aa-a57c-ee999f143d99",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'zaaezé'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[1] # on récupère la valeur présente dans l'index 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5f96e288-4db3-48af-8dba-09c5213a4c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(126, 126)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l[3], l[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c18bdfe1-926e-45a1-a12a-5a8aca7150e3",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l["
+   ]
   }
  ],
  "metadata": {
