--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -154,14 +154,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41c13eec-0e85-4cb8-be92-b3afe5251b00",
+   "metadata": {},
+   "source": [
+    "Le -1 vient de cette formalation `l[len(l) - 1]`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "829f5ed7-572a-41a1-b705-b8c823e6b3fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43ml\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "l[5]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c18bdfe1-926e-45a1-a12a-5a8aca7150e3",
+   "id": "2749176b-02d8-4ce1-a3e6-62b30fdb9d3d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "l["
-   ]
+   "source": []
   }
  ],
  "metadata": {
