--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -207,8 +207,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4c3dab61-89d1-4dd0-bc9f-8191a94be8e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"IndexError: list index out of range\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e0321d99-f7a0-46b5-9c89-927abb273a31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'xError'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[4:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "705431af-4430-4cfe-8e8c-c9c069d0d506",
    "metadata": {},
    "outputs": [],
    "source": []
