--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -206,6 +206,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b4823536-1a2f-4d2e-b47e-84e8fd144aa8",
+   "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "4c3dab61-89d1-4dd0-bc9f-8191a94be8e8",
@@ -217,23 +225,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "e0321d99-f7a0-46b5-9c89-927abb273a31",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Ierrltnxuorg'"
+       "'neErr'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s[::3]"
+    "debut = 1\n",
+    "fin = 10\n",
+    "pas = 2\n",
+    "\n",
+    "s[debut:fin:pas]"
    ]
   },
   {
