--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -68,15 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "072a03b6-1404-407b-b6bc-2d1c76480552",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 't']\n",
+      "(3.2, [1, 2, 3])\n"
+     ]
+    }
+   ],
    "source": [
-    "a = [\n",
-    "    (), \n",
-    "    (),\n",
-    "]"
+    "ma_liste = [\n",
+    "    [1, \"t\"], \n",
+    "    (3.2, [1, 2, 3]),\n",
+    "]\n",
+    "\n",
+    "for element in ma_liste:\n",
+    "    print(element)"
    ]
   },
   {
@@ -210,7 +222,7 @@
    "id": "b4823536-1a2f-4d2e-b47e-84e8fd144aa8",
    "metadata": {},
    "source": [
-    "#"
+    "## Slicing"
    ]
   },
   {
