--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "072a03b6-1404-407b-b6bc-2d1c76480552",
    "metadata": {},
    "outputs": [
@@ -76,8 +76,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 't']\n",
-      "(3.2, [1, 2, 3])\n"
+      "1\n",
+      "t\n",
+      "----\n",
+      "3.2\n",
+      "[1, 2, 3]\n",
+      "----\n"
      ]
     }
    ],
@@ -88,7 +92,12 @@
     "]\n",
     "\n",
     "for element in ma_liste:\n",
-    "    print(element)"
+    "    premier, deuxieme = element\n",
+    "\n",
+    "for premier, deuxieme in ma_liste:\n",
+    "    print(premier)\n",
+    "    print(deuxieme)\n",
+    "    print(\"----\")"
    ]
   },
   {
