--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "d0243081-b782-4968-9884-d5a3440323d5",
    "metadata": {},
    "outputs": [
@@ -64,6 +64,28 @@
     "a, b = 1, 2 \n",
     "print(a)\n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5d42f934-d1c1-474f-b858-18fe946bd6d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m a, b \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m\n",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = 1, 2, 3, 4, 5"
    ]
   },
   {
@@ -87,14 +109,15 @@
    ],
    "source": [
     "ma_liste = [\n",
-    "    [1, \"t\"], \n",
+    "    [1, \"the\"], \n",
     "    (3.2, [1, 2, 3]),\n",
     "]\n",
     "\n",
     "for element in ma_liste:\n",
     "    premier, deuxieme = element\n",
+    "    print(...)\n",
     "\n",
-    "for premier, deuxieme in ma_liste:\n",
+    "for (premier, (a, b, c)) in ma_liste:\n",
     "    print(premier)\n",
     "    print(deuxieme)\n",
     "    print(\"----\")"
