--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "id": "5d42f934-d1c1-474f-b858-18fe946bd6d6",
    "metadata": {},
    "outputs": [
@@ -77,14 +77,16 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "[2, 3, 4, 5]\n"
+      "[2, 3, 4]\n",
+      "5\n"
      ]
     }
    ],
    "source": [
-    "a, *b = 1, 2, 3, 4, 5\n",
+    "a, *b, c = 1, 2\n",
     "print(a)\n",
-    "print(b)"
+    "print(b)\n",
+    "print(c)"
    ]
   },
   {
