--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "072a03b6-1404-407b-b6bc-2d1c76480552",
    "metadata": {},
    "outputs": [
@@ -97,11 +97,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "1 the\n",
+      "3.2 [1, 2, 3]\n",
       "1\n",
-      "t\n",
+      "t h e\n",
       "----\n",
       "3.2\n",
-      "[1, 2, 3]\n",
+      "1 2 3\n",
       "----\n"
      ]
     }
@@ -114,11 +116,11 @@
     "\n",
     "for element in ma_liste:\n",
     "    premier, deuxieme = element\n",
-    "    print(...)\n",
+    "    print(premier, deuxieme)\n",
     "\n",
     "for (premier, (a, b, c)) in ma_liste:\n",
     "    print(premier)\n",
-    "    print(deuxieme)\n",
+    "    print(a, b, c)\n",
     "    print(\"----\")"
    ]
   },
