--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -294,9 +294,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9b76cf77-daf3-48d9-a805-d8d0d241320c",
+   "metadata": {},
+   "source": [
+    "# Fizz buzz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "53fa1478-ceca-420f-adf5-d1db6140387c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3979360200.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[55], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    case number %3 == 0:\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(1, 101):\n",
+    "    match (number % 3, :\n",
+    "        case number %3 == 0:\n",
+    "            print(\"fizz\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "705431af-4430-4cfe-8e8c-c9c069d0d506",
+   "id": "fc9c9692-3294-4406-b83d-5b7844138774",
    "metadata": {},
    "outputs": [],
    "source": []
