--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "id": "53fa1478-ceca-420f-adf5-d1db6140387c",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
    ],
    "source": [
     "for number in range(1, 101):\n",
-    "    match number % 3, number % 5):\n",
+    "    match number % 3, number % 5:\n",
     "        case 0, 0:\n",
     "            print(\"fizzbuzz\")\n",
     "        case _, 0:\n",
