--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -481,8 +481,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "f210a8c2-89b2-4ea4-b1bd-719767ca8c20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(False), int(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "42346ca9-6569-496d-9cf2-3640c0a25e4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'fizzbuzz'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"fizz\" * (15 % 3 == 0) + \"buzz\" * ("
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "939966ff-16d0-40ee-bef5-c672cbd057cb",
    "metadata": {},
    "outputs": [],
    "source": []
