--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 77,
    "id": "42346ca9-6569-496d-9cf2-3640c0a25e4f",
    "metadata": {},
    "outputs": [
@@ -512,19 +512,41 @@
        "'fizzbuzz'"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"fizz\" * (15 % 3 == 0) + \"buzz\" * ("
+    "\"fizz\" * (15 % 3 == 0) + \"buzz\" * (15 % 5 == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "939966ff-16d0-40ee-bef5-c672cbd057cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[80], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;241;43m1\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "0 or 1/0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "939966ff-16d0-40ee-bef5-c672cbd057cb",
+   "id": "8aa8d7c2-49d1-4ad1-b4ff-9b0dbb8c78e6",
    "metadata": {},
    "outputs": [],
    "source": []
