--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -567,7 +567,10 @@
     }
    ],
    "source": [
-    "map?"
+    "def f(x):\n",
+    "    return x ** 2 \n",
+    "\n",
+    "f("
    ]
   },
   {
