--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -545,32 +545,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "id": "8aa8d7c2-49d1-4ad1-b4ff-9b0dbb8c78e6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-       "\u001b[0;31mDocstring:\u001b[0m     \n",
-       "map(func, *iterables) --> map object\n",
-       "\n",
-       "Make an iterator that computes the function using arguments from\n",
-       "each of the iterables.  Stops when the shortest iterable is exhausted.\n",
-       "\u001b[0;31mType:\u001b[0m           type\n",
-       "\u001b[0;31mSubclasses:\u001b[0m     "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
     }
    ],
    "source": [
     "def f(x):\n",
     "    return x ** 2 \n",
     "\n",
-    "f("
+    "ma_liste = [1, 2, 3, 4, 5]\n",
+    "res = []\n",
+    "for element in ma_liste:\n",
+    "    tmp = f(element)\n",
+    "    res.append(tmp)\n",
+    "print(res)"
    ]
   },
   {
