--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 103,
    "id": "8aa8d7c2-49d1-4ad1-b4ff-9b0dbb8c78e6",
    "metadata": {},
    "outputs": [
@@ -559,7 +559,7 @@
    ],
    "source": [
     "def f(x):\n",
-    "    return x ** 2 \n",
+    "    return x ** 2\n",
     "\n",
     "ma_liste = [1, 2, 3, 4, 5]\n",
     "res = []\n",
@@ -613,29 +613,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 97,
    "id": "f1d3187d-3b81-4cab-8ed8-4c773a6ccde0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "toto = f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5b478556-f210-4411-bc0e-fd15ccec95f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function __main__.f(x)>"
+       "25"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f"
+    "toto(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b478556-f210-4411-bc0e-fd15ccec95f4",
+   "id": "fe6c7b50-5b9f-43da-80ca-441460aca0f4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06c97e90-5d3c-41e5-beab-b88e2c2a0e32",
    "metadata": {},
    "outputs": [],
    "source": []
