--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -566,7 +566,11 @@
     "for element in ma_liste:\n",
     "    tmp = f(element)\n",
     "    res.append(tmp)\n",
-    "print(res)"
+    "print(res)\n",
+    "\n",
+    "\n",
+    "def my_map(...):\n",
+    "    ..."
    ]
   },
   {
@@ -587,7 +591,7 @@
     }
    ],
    "source": [
-    "list(map(f, ma_liste))"
+    "list(map(f, ma_liste)) == my"
    ]
   },
   {
@@ -644,11 +648,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "fe6c7b50-5b9f-43da-80ca-441460aca0f4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mInit signature:\u001b[0m \u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m/\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m     \n",
+       "map(func, *iterables) --> map object\n",
+       "\n",
+       "Make an iterator that computes the function using arguments from\n",
+       "each of the iterables.  Stops when the shortest iterable is exhausted.\n",
+       "\u001b[0;31mType:\u001b[0m           type\n",
+       "\u001b[0;31mSubclasses:\u001b[0m     "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map?"
+   ]
   },
   {
    "cell_type": "code",
