--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -591,7 +591,7 @@
     }
    ],
    "source": [
-    "list(map(f, ma_liste)) == my"
+    "list(map(f, ma_liste)) == my_map(f, ma_liste)"
    ]
   },
   {
