--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "id": "8aa8d7c2-49d1-4ad1-b4ff-9b0dbb8c78e6",
    "metadata": {},
    "outputs": [
@@ -569,23 +569,27 @@
     "print(res)\n",
     "\n",
     "\n",
-    "def my_map(...):\n",
-    "    ..."
+    "def my_map(func, elements):\n",
+    "    res = []\n",
+    "    for element in elements:\n",
+    "        tmp = func(element)\n",
+    "        res.append(tmp)\n",
+    "    return res \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 110,
    "id": "94754892-90cb-4665-b00f-6d8598808d13",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 4, 9, 16, 25]"
+       "True"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
