--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 111,
    "id": "8aa8d7c2-49d1-4ad1-b4ff-9b0dbb8c78e6",
    "metadata": {},
    "outputs": [
@@ -568,8 +568,9 @@
     "    res.append(tmp)\n",
     "print(res)\n",
     "\n",
+    "import typing\n",
     "\n",
-    "def my_map(func, elements):\n",
+    "def my_map(func: typing.Callable[], elements):\n",
     "    res = []\n",
     "    for element in elements:\n",
     "        tmp = func(element)\n",
