--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 113,
    "id": "8aa8d7c2-49d1-4ad1-b4ff-9b0dbb8c78e6",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,10 @@
     "\n",
     "import typing\n",
     "\n",
-    "def my_map(func: typing.Callable[], elements):\n",
+    "type1 = typing.TypeVar(\"type1\")\n",
+    "type2 = typing.TypeVar(\"type2\")\n",
+    "\n",
+    "def my_map(func: typing.Callable[type1, type2], elements: list[type1]) -> list[type2]:\n",
     "    res = []\n",
     "    for element in elements:\n",
     "        tmp = func(element)\n",
