--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -682,9 +682,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8e60b34-eab4-4d3c-a572-8256a6a5f440",
+   "metadata": {},
+   "source": [
+    "# Nommage des variables \n",
+    "\n",
+    "    ma_jolie_variable = \"snake case\"\n",
+    "    maJolieVariable = \"camel case\"\n",
+    "    MaJolieVariable = \"pascal case\"\n",
+    "    MA_JOLIE_VARIABLE = \"uppercase\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c97e90-5d3c-41e5-beab-b88e2c2a0e32",
+   "id": "a7710b74-6790-4788-bb4b-e5f63873aa14",
    "metadata": {},
    "outputs": [],
    "source": []
