--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -723,16 +723,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "5f08a8d9-36a4-4b97-92ab-20c18782d45b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'elements' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[115], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m res \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m element \u001b[38;5;129;01min\u001b[39;00m \u001b[43melements\u001b[49m:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m est_pair(element):\n\u001b[1;32m      4\u001b[0m         res\u001b[38;5;241m.\u001b[39mappend(element)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'elements' is not defined"
+     ]
+    }
+   ],
    "source": [
     "res = []\n",
     "for element in elements:\n",
     "    if est_pair(element):\n",
     "        res.append(element)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "437a9441-fa91-4501-820e-25759f8b304b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "a\n",
+      "l\n",
+      "u\n",
+      "t\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ezfrgthyjukyjtyrhegzf in \"salut\":\n",
+    "    toto = 2\n",
+    "    print(ezfrgthyjukyjtyrhegzf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "57d9faf5-db05-4f44-be0b-c3c0db44b0cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ezfrgthyjukyjtyrhegzf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "1b8175d0-2ae2-47de-84d5-d9f99755407f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9b993d2-0908-4459-8153-c8eb944e9477",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
