--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -747,6 +747,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72debbdf-2788-4375-b7b6-3cab4e94a2b7",
+   "metadata": {},
+   "source": [
+    "# Pas d'isolation des variables dans les blocs, à part dans les fonctions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 119,
    "id": "437a9441-fa91-4501-820e-25759f8b304b",
