--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -819,8 +819,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "id": "c9b993d2-0908-4459-8153-c8eb944e9477",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = []\n",
+    "def oups():\n",
+    "    a.append(2)\n",
+    "\n",
+    "print(a)\n",
+    "oups()\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0eec9bc-f053-4ca5-8fac-38ea8ccafa5d",
    "metadata": {},
    "outputs": [],
    "source": []
