--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 123,
    "id": "c9b993d2-0908-4459-8153-c8eb944e9477",
    "metadata": {},
    "outputs": [
@@ -844,8 +844,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "e0eec9bc-f053-4ca5-8fac-38ea8ccafa5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 []\n",
+      "2 ['toto']\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = 2\n",
+    "c = []\n",
+    "def modifie_parametre(param, param2):\n",
+    "    param = 3\n",
+    "    param2.append(\"toto\")\n",
+    "    \n",
+    "print(b, c)\n",
+    "modifie_parametre(b, c)\n",
+    "print(b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a4e4767-3bca-4e65-92fa-3c459c5c6bfa",
    "metadata": {},
    "outputs": [],
    "source": []
