--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 128,
    "id": "e0eec9bc-f053-4ca5-8fac-38ea8ccafa5d",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
     "b = 2\n",
     "c = []\n",
     "def modifie_parametre(param, param2):\n",
-    "    param = 3\n",
+    "    param += 3\n",
     "    param2.append(\"toto\")\n",
     "    \n",
     "print(b, c)\n",
