--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -871,8 +871,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "0a4e4767-3bca-4e65-92fa-3c459c5c6bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f():\n",
+    "    print(uiyhtntrgbferdfez)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "711064e0-f17b-4454-b935-5f59a207f9ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'uiyhtntrgbferdfez' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[130], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[129], line 2\u001b[0m, in \u001b[0;36mf\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mf\u001b[39m():\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43muiyhtntrgbferdfez\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'uiyhtntrgbferdfez' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b039954f-b67c-455f-92d3-06a676a8f946",
    "metadata": {},
    "outputs": [],
    "source": []
