--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -882,32 +882,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 131,
    "id": "711064e0-f17b-4454-b935-5f59a207f9ae",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'uiyhtntrgbferdfez' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[130], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mf\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[129], line 2\u001b[0m, in \u001b[0;36mf\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mf\u001b[39m():\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43muiyhtntrgbferdfez\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'uiyhtntrgbferdfez' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "uiyhtntrgbferdfez = 1\n",
     "f()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "id": "b039954f-b67c-455f-92d3-06a676a8f946",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RecursionError",
+     "evalue": "maximum recursion depth exceeded",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRecursionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[134], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mzatyyht\u001b[39m():\n\u001b[1;32m      4\u001b[0m     a()\n\u001b[0;32m----> 6\u001b[0m \u001b[43ma\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[134], line 2\u001b[0m, in \u001b[0;36ma\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21ma\u001b[39m():\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mzatyyht\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[134], line 4\u001b[0m, in \u001b[0;36mzatyyht\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mzatyyht\u001b[39m():\n\u001b[0;32m----> 4\u001b[0m     \u001b[43ma\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[134], line 2\u001b[0m, in \u001b[0;36ma\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21ma\u001b[39m():\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mzatyyht\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[134], line 4\u001b[0m, in \u001b[0;36mzatyyht\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mzatyyht\u001b[39m():\n\u001b[0;32m----> 4\u001b[0m     \u001b[43ma\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "    \u001b[0;31m[... skipping similar frames: a at line 2 (1486 times), zatyyht at line 4 (1486 times)]\u001b[0m\n",
+      "Cell \u001b[0;32mIn[134], line 2\u001b[0m, in \u001b[0;36ma\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21ma\u001b[39m():\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mzatyyht\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[134], line 4\u001b[0m, in \u001b[0;36mzatyyht\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mzatyyht\u001b[39m():\n\u001b[0;32m----> 4\u001b[0m     \u001b[43ma\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mRecursionError\u001b[0m: maximum recursion depth exceeded"
+     ]
+    }
+   ],
+   "source": [
+    "def a():\n",
+    "    zatyyht()\n",
+    "def zatyyht():\n",
+    "    a()\n",
+    "\n",
+    "a()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a8575ea-60fe-4ce4-8caa-42f7f3d7404e",
    "metadata": {},
    "outputs": [],
    "source": []
