--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -918,7 +918,10 @@
    "id": "5a8575ea-60fe-4ce4-8caa-42f7f3d7404e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def f(a, b=print(\"salut\")):\n",
+    "    print(\"dans la fonction\")"
+   ]
   }
  ],
  "metadata": {
