--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -914,14 +914,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "id": "5a8575ea-60fe-4ce4-8caa-42f7f3d7404e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "salut\n"
+     ]
+    }
+   ],
    "source": [
     "def f(a, b=print(\"salut\")):\n",
     "    print(\"dans la fonction\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e46ee93-4e92-4473-a3fe-05ed11e14b02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd4cc5f4-626b-4b0a-8696-fb62504ceb48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
