--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 140,
    "id": "5a8575ea-60fe-4ce4-8caa-42f7f3d7404e",
    "metadata": {},
    "outputs": [
@@ -922,12 +922,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "salut\n"
+      "dans ma liste\n"
      ]
     }
    ],
    "source": [
-    "def f(a, b=print(\"salut\")):\n",
+    "def ma_liste():\n",
+    "    print(\"dans ma liste\")\n",
+    "    return []\n",
+    "\n",
+    "def f(a, b=ma_liste()):\n",
     "    print(\"dans la fonction\")"
    ]
   },
@@ -937,7 +941,9 @@
    "id": "6e46ee93-4e92-4473-a3fe-05ed11e14b02",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def append(elem, li=[])\n"
+   ]
   },
   {
    "cell_type": "code",
