--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -937,18 +937,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "id": "6e46ee93-4e92-4473-a3fe-05ed11e14b02",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def append(elem, li=[])\n"
+    "def append(elem, li=None):\n",
+    "    \n",
+    "    li = []\n",
+    "    li.append(elem)\n",
+    "    return li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "dd4cc5f4-626b-4b0a-8696-fb62504ceb48",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "append(2, [1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "bc8385aa-1ecc-4457-8771-3aa4457295ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "append(1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd4cc5f4-626b-4b0a-8696-fb62504ceb48",
+   "id": "18918dae-cada-4f6e-8ff9-8fe1dde71abd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3490c5a9-9d67-467b-8974-540f1cab567c",
    "metadata": {},
    "outputs": [],
    "source": []
