--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -937,21 +937,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 158,
    "id": "6e46ee93-4e92-4473-a3fe-05ed11e14b02",
    "metadata": {},
    "outputs": [],
    "source": [
     "def append(elem, li=None):\n",
-    "    \n",
-    "    li = []\n",
+    "    li.clear()\n",
     "    li.append(elem)\n",
     "    return li"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 159,
    "id": "dd4cc5f4-626b-4b0a-8696-fb62504ceb48",
    "metadata": {},
    "outputs": [
@@ -961,7 +960,7 @@
        "[2]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,19 +971,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 160,
    "id": "bc8385aa-1ecc-4457-8771-3aa4457295ac",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1]"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'clear'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[160], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mappend\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[158], line 2\u001b[0m, in \u001b[0;36mappend\u001b[0;34m(elem, li)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mappend\u001b[39m(elem, li\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mli\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclear\u001b[49m()\n\u001b[1;32m      3\u001b[0m     li\u001b[38;5;241m.\u001b[39mappend(elem)\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m li\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'clear'"
+     ]
     }
    ],
    "source": [
