--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -937,13 +937,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 161,
    "id": "6e46ee93-4e92-4473-a3fe-05ed11e14b02",
    "metadata": {},
    "outputs": [],
    "source": [
     "def append(elem, li=None):\n",
-    "    li.clear()\n",
+    "    if li is None:\n",
+    "        li = []\n",
     "    li.append(elem)\n",
     "    return li"
    ]
