--- a/tape_en_cours/J2.ipynb
+++ b/tape_en_cours/J2.ipynb
@@ -1007,7 +1007,9 @@
    "id": "3490c5a9-9d67-467b-8974-540f1cab567c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = \"une chaine\""
+   ]
   }
  ],
  "metadata": {
